--- a/pricelist.html
+++ b/pricelist.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Orthoc </title>
+  <title> Orthoc - Ceník </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="departments.html">Departments <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="pricelist.html">Ceník <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="doctors.html">Doctors</a>
@@ -86,76 +86,52 @@
     <!-- end header section -->
   </div>
 
-  <!-- department section -->
+  <!-- price section -->
 
-  <section class="department_section layout_padding">
-    <div class="department_container">
+  <section class="price_section layout_padding">
+    <div class="price_container">
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our Departments
+            Náš Ceník
           </h2>
           <p>
-            Asperiores sunt consectetur impedit nulla molestiae delectus repellat laborum dolores doloremque accusantium
+            Nabízíme širokou škálu zdravotnických služeb. Níže naleznete přehled našich cen.
           </p>
         </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="box ">
-              <div class="img-box">
-                <img src="images/s1.png" alt="">
-              </div>
               <div class="detail-box">
                 <h5>
-                  Cardiology
+                  Konzultace s lékařem
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable page when looking at its layout.
+                  Cena: 1000 Kč
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="box ">
-              <div class="img-box">
-                <img src="images/s2.png" alt="">
-              </div>
               <div class="detail-box">
                 <h5>
-                  Diagnosis
+                  Diagnostika
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable page when looking at its layout.
+                  Cena: 1500 Kč
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="box ">
-              <div class="img-box">
-                <img src="images/s3.png" alt="">
-              </div>
               <div class="detail-box">
                 <h5>
-                  Surgery
+                  Chirurgický zákrok
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable page when looking at its layout.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/s4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  First Aid
-                </h5>
-                <p>
-                  fact that a reader will be distracted by the readable page when looking at its layout.
+                  Cena: 5000 Kč
                 </p>
               </div>
             </div>
@@ -163,14 +139,14 @@
         </div>
         <div class="btn-box">
           <a href="">
-            View All
+            Zobrazit více služeb
           </a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- end department section -->
+  <!-- end price section -->
 
   <!-- footer section -->
   <footer class="footer_section">
@@ -239,8 +215,8 @@
               <a class="" href="about.html">
                 About
               </a>
-              <a class="active" href="departments.html">
-                Departments
+              <a class="active" href="pricelist.html">
+                Ceník
               </a>
               <a class="" href="doctors.html">
                 Doctors
@@ -267,8 +243,8 @@
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
           <a href="https://html.design/">Free Html Templates<br><br></a>
-            &copy; <span id="displayYear"></span> Distributed By
-            <a href="https://themewagon.com/">ThemeWagon</a>
+          &copy; <span id="displayYear"></span> Distributed By
+          <a href="https://themewagon.com/">ThemeWagon</a>
         </p>
       </div>
     </div>
@@ -283,13 +259,11 @@
   <!-- bootstrap js -->
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <!-- owl slider -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <!-- custom js -->
   <script type="text/javascript" src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=&callback=myMap"></script>
   <!-- End Google Map -->
 
 </body>
