--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="departments.html">Departments</a>
+                <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="doctors.html">Doctors</a>
