--- a/doctors.html
+++ b/doctors.html
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="departments.html">Departments</a>
+                <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="doctors.html">Doctors <span class="sr-only">(current)</span> </a>
