--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title> Orthoc </title>
+  <title> Barbara Bui Esthetic </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Orthoc
+              Barbara Bui Esthetic
             </span>
           </a>
 
@@ -54,19 +54,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="index.html">Domů </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="about.html"> O nás</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="doctors.html">Doctors</a>
+                <a class="nav-link" href="doctors.html">Doktoři</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="contact.html">Kontakt <span class="sr-only">(current)</span> </a>
               </li>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Get In Touch
+          Spojte se s námi!
         </h2>
       </div>
       <div class="row">
@@ -96,12 +96,12 @@
               <div class="form-row">
                 <div class="col-lg-6">
                   <div>
-                    <input type="text" placeholder="Your Name" />
+                    <input type="text" placeholder="Jméno" />
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <input type="text" placeholder="Phone Number" />
+                    <input type="text" placeholder="Telefonní číslo" />
                   </div>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                 <input type="email" placeholder="Email" />
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="text" class="message-box" placeholder="Zpráva" />
               </div>
               <div class="btn_box">
                 <button>
@@ -150,13 +150,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +420 608 416 686
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  buithi.dien@yahoo.com
                 </span>
               </a>
             </div>
@@ -179,7 +179,7 @@
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              O nás
             </h4>
             <p>
               Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
@@ -193,19 +193,19 @@
             </h4>
             <div class="footer_links">
               <a class="" href="index.html">
-                Home
+                Domů
               </a>
               <a class="" href="about.html">
-                About
+                O nás
               </a>
-              <a class="" href="departments.html">
-                Departments
+              <a class="" href="pricelist.html">
+                Ceník
               </a>
               <a class="" href="doctors.html">
-                Doctors
+                Doktoři
               </a>
               <a class="active" href="contact.html">
-                Contact Us
+                Kontakt
               </a>
             </div>
           </div>
