--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Orthoc </title>
+  <title> Barbara Bui Esthetic </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -62,16 +62,16 @@
                 <a class="nav-link" href="index.html">Domů <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="about.html"> O nás</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="doctors.html">Doctors</a>
+                <a class="nav-link" href="doctors.html">Doktoři</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -167,7 +167,7 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our Departments
+            Ceník
           </h2>
           <p>
             Asperiores sunt consectetur impedit nulla molestiae delectus repellat laborum dolores doloremque accusantium
@@ -246,21 +246,21 @@
 
   <!-- end department section -->
 
-  <!-- about section -->
+  <!-- O nás section -->
 
-  <section class="about_section layout_margin-bottom">
+  <section class="O nás_section layout_margin-bottom">
     <div class="container  ">
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/O nás-img.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About <span>Us</span>
+                O nás <span>Us</span>
               </h2>
             </div>
             <p>
@@ -278,7 +278,7 @@
     </div>
   </section>
 
-  <!-- end about section -->
+  <!-- end O nás section -->
 
   <!-- doctor section -->
 
@@ -286,7 +286,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Doctors
+          Naši doktoři
         </h2>
         <p class="col-md-10 mx-auto px-0">
           Incilint sapiente illo quo praesentium officiis laudantium nostrum, ad adipisci cupiditate sit, quisquam aliquid. Officiis laudantium fuga ad voluptas aspernatur error fugiat quos facilis saepe quas fugit, beatae id quisquam.
@@ -314,10 +314,10 @@
                 </a>
               </div>
               <h5>
-                Elina Josh
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+                Doktorka
               </h6>
             </div>
           </div>
@@ -343,10 +343,10 @@
                 </a>
               </div>
               <h5>
-                Adam View
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+                Doktorka
               </h6>
             </div>
           </div>
@@ -372,10 +372,10 @@
                 </a>
               </div>
               <h5>
-                Mia Mike
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+              Doktorka
               </h6>
             </div>
           </div>
@@ -396,7 +396,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Get In Touch
+          Spojte se s námi!
         </h2>
       </div>
       <div class="row">
@@ -411,7 +411,7 @@
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    <input type="text" placeholder="Phone Number" />
+                    <input type="text" placeholder="Telefonní číslo" />
                   </div>
                 </div>
               </div>
@@ -419,7 +419,7 @@
                 <input type="email" placeholder="Email" />
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="text" class="message-box" placeholder="Zpráva" />
               </div>
               <div class="btn_box">
                 <button>
@@ -462,7 +462,7 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Alan Emerson
+                        Barbara Bui
                       </h6>
                     </div>
                     <p>
@@ -484,7 +484,7 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Alan Emerson
+                         2
                       </h6>
                     </div>
                     <p>
@@ -506,7 +506,7 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Alan Emerson
+                        Barbara Bui
                       </h6>
                     </div>
                     <p>
@@ -554,13 +554,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +420 608 416 686
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  buithi.dien@yahoo.com
                 </span>
               </a>
             </div>
@@ -583,7 +583,7 @@
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              O nás
             </h4>
             <p>
               Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
@@ -597,19 +597,19 @@
             </h4>
             <div class="footer_links">
               <a class="active" href="index.html">
-                Home
+                Domů
               </a>
               <a class="" href="about.html">
-                About
+                O nás
               </a>
-              <a class="" href="departments.html">
-                Departments
+              <a class="" href="pricelist.html">
+                Ceník
               </a>
               <a class="" href="doctors.html">
-                Doctors
+                Doktoři
               </a>
               <a class="" href="contact.html">
-                Contact Us
+                Kontakt
               </a>
             </div>
           </div>
