--- a/pricelist.html
+++ b/pricelist.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Orthoc - Ceník </title>
+  <title> Barbara Bui Esthetic - Ceník </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -48,7 +48,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Orthoc
+              Barbara Bui Esthetic
             </span>
           </a>
 
@@ -59,19 +59,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="index.html">Domů </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="about.html"> O nás</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="pricelist.html">Ceník <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="doctors.html">Doctors</a>
+                <a class="nav-link" href="doctors.html">Doktoři</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -98,50 +98,190 @@
           <p>
             Nabízíme širokou škálu zdravotnických služeb. Níže naleznete přehled našich cen.
           </p>
+          <h3>Laserové odstranění chlupů</h3>
+          <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+                background-color: #f8f9fa;
+            }
+            h1 {
+                text-align: center;
+                color: #333;
+            }
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                margin: 20px 0;
+                background-color: #ffffff;
+            }
+            th, td {
+                border: 1px solid #ddd;
+                padding: 10px;
+                text-align: left;
+            }
+            th {
+                background-color: #6c757d;
+                color: #ffffff;
+            }
+            tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+        </style>
+          <table>
+
+            <thead>
+                <tr>
+                    <th>Část těla</th>
+                    <th>Cena za 1 ošetření (Kč)</th>
+                    <th>Cena za balíček - 6 ošetření (Kč)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Horní ret</td>
+                    <td>660</td>
+                    <td>3,300</td>
+                </tr>
+                <tr>
+                    <td>Brada</td>
+                    <td>700</td>
+                    <td>3,500</td>
+                </tr>
+                <tr>
+                    <td>Tváře – obě</td>
+                    <td>1,050</td>
+                    <td>5,250</td>
+                </tr>
+                <tr>
+                    <td>Mezi obočím</td>
+                    <td>330</td>
+                    <td>1,650</td>
+                </tr>
+                <tr>
+                    <td>Pejzy</td>
+                    <td>850</td>
+                    <td>4,250</td>
+                </tr>
+                <tr>
+                    <td>Celý obličej</td>
+                    <td>1,950</td>
+                    <td>9,750</td>
+                </tr>
+                <tr>
+                    <td>Přední partie krku</td>
+                    <td>1,250</td>
+                    <td>6,250</td>
+                </tr>
+                <tr>
+                    <td>Zadní partie krku</td>
+                    <td>1,250</td>
+                    <td>6,250</td>
+                </tr>
+                <tr>
+                    <td>Podpaží obě</td>
+                    <td>2,000</td>
+                    <td>10,000</td>
+                </tr>
+                <tr>
+                    <td>Předloktí obě</td>
+                    <td>3,000</td>
+                    <td>15,000</td>
+                </tr>
+                <tr>
+                    <td>Celé ruce</td>
+                    <td>3,500</td>
+                    <td>17,500</td>
+                </tr>
+                <tr>
+                    <td>Hrudník – muži</td>
+                    <td>3,100</td>
+                    <td>15,500</td>
+                </tr>
+                <tr>
+                    <td>Okolí prsních dvorců</td>
+                    <td>1,000</td>
+                    <td>5,000</td>
+                </tr>
+                <tr>
+                    <td>Břicho</td>
+                    <td>2,500</td>
+                    <td>12,500</td>
+                </tr>
+                <tr>
+                    <td>Okolo pupíku</td>
+                    <td>750</td>
+                    <td>3,750</td>
+                </tr>
+                <tr>
+                    <td>Střední linie pod pupíkem</td>
+                    <td>750</td>
+                    <td>3,750</td>
+                </tr>
+                <tr>
+                    <td>Třísla</td>
+                    <td>1,500</td>
+                    <td>7,500</td>
+                </tr>
+                <tr>
+                    <td>Brazílie – intimní partie</td>
+                    <td>3,000</td>
+                    <td>15,000</td>
+                </tr>
+                <tr>
+                    <td>Mezi hýžděmi</td>
+                    <td>2,000</td>
+                    <td>10,000</td>
+                </tr>
+                <tr>
+                    <td>Hýždě</td>
+                    <td>2,400</td>
+                    <td>12,000</td>
+                </tr>
+                <tr>
+                    <td>Lýtka + holeně</td>
+                    <td>3,500</td>
+                    <td>17,500</td>
+                </tr>
+                <tr>
+                    <td>Kolena</td>
+                    <td>700</td>
+                    <td>3,500</td>
+                </tr>
+                <tr>
+                    <td>Stehna</td>
+                    <td>5,300</td>
+                    <td>26,500</td>
+                </tr>
+                <tr>
+                    <td>Celé nohy</td>
+                    <td>8,500</td>
+                    <td>42,500</td>
+                </tr>
+                <tr>
+                    <td>Horní část zad</td>
+                    <td>3,800</td>
+                    <td>19,000</td>
+                </tr>
+                <tr>
+                    <td>Dolní část zad</td>
+                    <td>3,800</td>
+                    <td>19,000</td>
+                </tr>
+                <tr>
+                    <td>Ramena</td>
+                    <td>2,300</td>
+                    <td>11,500</td>
+                </tr>
+                <tr>
+                    <td>Záda celá</td>
+                    <td>6,000</td>
+                    <td>30,000</td>
+                </tr>
+            </tbody>
+        </table>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="box ">
-              <div class="detail-box">
-                <h5>
-                  Konzultace s lékařem
-                </h5>
-                <p>
-                  Cena: 1000 Kč
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="box ">
-              <div class="detail-box">
-                <h5>
-                  Diagnostika
-                </h5>
-                <p>
-                  Cena: 1500 Kč
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="box ">
-              <div class="detail-box">
-                <h5>
-                  Chirurgický zákrok
-                </h5>
-                <p>
-                  Cena: 5000 Kč
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="btn-box">
-          <a href="">
-            Zobrazit více služeb
-          </a>
-        </div>
+        
       </div>
     </div>
   </section>
@@ -167,13 +307,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +420 608 416 686
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  buithi.dien@yahoo.com
                 </span>
               </a>
             </div>
@@ -196,7 +336,7 @@
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              O nás
             </h4>
             <p>
               Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
@@ -210,19 +350,19 @@
             </h4>
             <div class="footer_links">
               <a class="" href="index.html">
-                Home
+                Domů
               </a>
               <a class="" href="about.html">
-                About
+                O nás
               </a>
               <a class="active" href="pricelist.html">
                 Ceník
               </a>
               <a class="" href="doctors.html">
-                Doctors
+                Doktoři
               </a>
               <a class="" href="contact.html">
-                Contact Us
+                Kontakt
               </a>
             </div>
           </div>
