--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Orthoc </title>
+  <title> Barbara Bui Esthetic </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Orthoc
+              Barbara Bui Esthetic
             </span>
           </a>
 
@@ -54,19 +54,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="index.html">Domů </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="about.html">O nás<span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="departments.html">Departments</a>
+                <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="doctors.html">Doctors</a>
+                <a class="nav-link" href="doctors.html">Doktoři</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -81,7 +81,7 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
+  <!-- About section -->
 
   <section class="about_section layout_padding">
     <div class="container  ">
@@ -95,7 +95,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About <span>Us</span>
+                O nás<span>Us</span>
               </h2>
             </div>
             <p>
@@ -134,13 +134,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +420 608 416 686
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  buithi.dien@yahoo.com
                 </span>
               </a>
             </div>
@@ -163,7 +163,7 @@
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              O nás
             </h4>
             <p>
               Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
@@ -177,19 +177,19 @@
             </h4>
             <div class="footer_links">
               <a class="" href="index.html">
-                Home
+                Domů
               </a>
               <a class="active" href="about.html">
-                About
+                O nás
               </a>
-              <a class="" href="departments.html">
-                Departments
+              <a class="" href="pricelist.html">
+                Ceník
               </a>
               <a class="" href="doctors.html">
-                Doctors
+                Doktoři
               </a>
               <a class="" href="contact.html">
-                Contact Us
+                Kontakt
               </a>
             </div>
           </div>
