--- a/doctors.html
+++ b/doctors.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Orthoc </title>
+  <title> Barbara Bui Esthetic </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -48,7 +48,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Orthoc
+              Barbara Bui Esthetic
             </span>
           </a>
 
@@ -59,19 +59,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="index.html">Domů </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="about.html"> O nás</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pricelist.html">Ceník</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="doctors.html">Doctors <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="doctors.html">Doktoři<span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -92,7 +92,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Doctors
+          Doktoři
         </h2>
         <p class="col-md-10 mx-auto px-0">
           Incilint sapiente illo quo praesentium officiis laudantium nostrum, ad adipisci cupiditate sit, quisquam aliquid. Officiis laudantium fuga ad voluptas aspernatur error fugiat quos facilis saepe quas fugit, beatae id quisquam.
@@ -120,10 +120,10 @@
                 </a>
               </div>
               <h5>
-                Elina Josh
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+                Doktorka
               </h6>
             </div>
           </div>
@@ -149,10 +149,10 @@
                 </a>
               </div>
               <h5>
-                Adam View
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+                Doktorka
               </h6>
             </div>
           </div>
@@ -178,10 +178,10 @@
                 </a>
               </div>
               <h5>
-                Mia Mike
+                Barbara Bui
               </h5>
               <h6 class="">
-                Doctor
+                Doktorka
               </h6>
             </div>
           </div>
@@ -216,13 +216,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +420 608 416 686
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  buithi.dien@yahoo.com
                 </span>
               </a>
             </div>
@@ -245,7 +245,7 @@
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              O nás
             </h4>
             <p>
               Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
@@ -259,19 +259,19 @@
             </h4>
             <div class="footer_links">
               <a class="" href="index.html">
-                Home
+                Domů
               </a>
               <a class="" href="about.html">
-                About
+                O nás
               </a>
-              <a class="" href="departments.html">
-                Departments
+              <a class="" href="pricelist.html">
+                Ceník
               </a>
               <a class="active" href="doctors.html">
-                Doctors
+                Doktoři
               </a>
               <a class="" href="contact.html">
-                Contact Us
+                Kontakt
               </a>
             </div>
           </div>
